[package]
name = "futures-task-lite"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]

[dependencies]
async-task-crate = { package = "async-task", version = "4.7.0", optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []

async-task = ["async-task-crate", "alloc"]
