[package]
name = "futures-task-lite"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]

[dependencies]
async-channel = { version = "2.2.0", optional = true }
async-executor-crate = { package = "async-executor", version = "1.8.0", optional = true }
async-lock = { version = "3.3.0", optional = true }
async-task-crate = { package = "async-task", version = "4.7.0", optional = true }
pin-project-lite = { version = "0.2.13", optional = true }
tokio = { version = "1.35.1", features = ["rt"], optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []

async-task = ["async-task-crate", "alloc"]
async-executor = ["async-executor-crate", "async-task", "std"]
ext = ["async-channel", "async-lock", "pin-project-lite", "std"]

[dev-dependencies]
futures-lite = "2.2.0"
